# work-buddy-runtime

./: .env.example  .gitignore  CMakeLists.txt  README.md  workbuddy.sh
datasets/: Coco.yaml
python/: README.md  requirements.txt  socket_server.py
python/Depth-Anything-V2/: README.md  app.py  main.py  requirements.txt
python/Gaussian-SLAM/: .gitignore  environment.yml
python/Gaussian-SLAM/simple-knn/: simple_knn.cu
python/pyannote/: main.py
src/: WorkBuddy.cpp
src/ChatOverlay/: ChatOverlay.cpp  ChatOverlay.hpp
src/FPSCounter/: FPSCounter.cpp  FPSCounter.hpp
src/ORBTracker/: ORBTracker.cpp  ORBTracker.hpp
src/OpenAI/: OpenAI.cpp  OpenAI.hpp
src/PythonSocket/: PythonSocket.cpp  PythonSocket.hpp
src/TextTyper/: TextTyper.cpp  TextTyper.hpp
src/YoloDetector/: YoloDetector.cpp  YoloDetector.hpp
src/utils/Base64/: Base64.cpp  Base64.hpp
utils/: yolo-onnx-export.py
